Terminar traducciones español

--- a/lang/es.json
+++ b/lang/es.json
@@ -27,16 +27,28 @@
     "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Antes de continuar, ¿podría verificar su dirección de correo electrónico haciendo clic en el enlace que le acabamos de enviar? Si no recibió el correo electrónico, con gusto le enviaremos otro.",
     "Browser Sessions": "Sesiones del navegador",
     "Cancel": "Cancelar",
+    "category": "Categoria",
+    "Category": "Categoria",
     "Click here to re-send the verification email.": "Haga clic aquí para reenviar el correo de verificación.",
     "Close": "Cerrar",
     "Code": "Código",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar contraseña",
+    "content": "Contenido",
+    "Content": "Contenido",
+    "console": "Consola",
+    "Console": "Consola",
     "Create": "Crear",
     "Create a new team to collaborate with others on projects.": "Cree un nuevo equipo para colaborar con otros en proyectos.",
     "Create Account": "Crear cuenta",
     "Create API Token": "Crear Token API",
     "Create New Team": "Crear nuevo equipo",
+    "Create a new Analysis": "Crear un nuevo analisis",
+    "create a new Analysis": "Crear un nuevo analisis",
+    "Create a new Genre": "Crear un genero",
+    "create a new Genre": "Crear un genero",
+    "Create a new Post": "Crear un nuevo post",
+    "create a new Post": "Crear un nuevo post",
     "Create Team": "Crear equipo",
     "Created.": "Creado.",
     "Current Password": "Contraseña actual",
@@ -48,6 +60,12 @@
     "Disable": "Deshabilitar",
     "Done.": "Hecho.",
     "Edit Profile": "Editar perfil",
+    "Edit a Post": "Editar post",
+    "edit a Post": "Editar post",
+    "Edit a analysis": "Editar analisis",
+    "edit a analysis": "Editar analisis",
+    "Edit a Genre": "Editar genero",
+    "edit a Genre": "Editar genero",
     "Editor": "Editor",
     "Editor users have the ability to read, create, and update.": "Los editores están habilitados para leer, crear y actualizar.",
     "Email": "Correo electrónico",
@@ -59,11 +77,15 @@
     "Environment file already exists.": "El archivo de entorno ya existe.",
     "Environment file not found.": "Archivo de entorno no encontrado.",
     "errors": "errores",
+    "excerpt": "Extracto",
+    "Excerpt": "Extracto",
     "Finish enabling two factor authentication.": "Termine de habilitar la autenticación de dos factores.",
     "For your security, please confirm your password to continue.": "Por su seguridad, confirme su contraseña para continuar.",
     "Forbidden": "Prohibido",
     "Forgot your password?": "¿Olvidó su contraseña?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "¿Olvidó su contraseña? No hay problema. Simplemente déjenos saber su dirección de correo electrónico y le enviaremos un enlace para restablecer la contraseña que le permitirá elegir una nueva.",
+    "genre": "Genero",
+    "Genre": "Genero",
     "Go to page :page": "Ir a la página :page",
     "Great! You have accepted the invitation to join the :team team.": "¡Genial! Usted ha aceptado la invitación para unirse al equipo :team.",
     "Hello!": "¡Hola!",
@@ -132,6 +154,8 @@
     "Role": "Rol",
     "Save": "Guardar",
     "Saved.": "Guardado.",
+    "score": "Puntuacion",
+    "Score": "Puntuacion",
     "Select A New Photo": "Seleccione una nueva foto",
     "Server Error": "Error del servidor",
     "Service Unavailable": "Servicio no disponible",
@@ -173,6 +197,8 @@
     "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña expirará en :count minutos.",
     "This user already belongs to the team.": "Este usuario ya pertenece al equipo.",
     "This user has already been invited to the team.": "Este usuario ya ha sido invitado al equipo.",
+    "Thumbnail": "Miniatura",
+    "thumbnail": "Miniatura",
     "Title": "Titulo",
     "to": "al",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "Para terminar de habilitar la autenticación de dos factores, escanee el siguiente código QR usando la aplicación de autenticación de su teléfono o ingrese la clave de configuración y proporcione el código OTP generado.",
@@ -181,6 +207,8 @@
     "Too Many Requests": "Demasiadas peticiones",
     "Two Factor Authentication": "Autenticación de dos factores",
     "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "La autenticación de dos factores ahora está habilitada. Escanee el siguiente código QR usando la aplicación de autenticación de su teléfono o ingrese la clave de configuración.",
+    "Type": "Tipo",
+    "type": "Tipo",
     "Unauthorized": "No autorizado",
     "Unknown": "Desconocido",
     "Update Password": "Actualizar contraseña",
